update etter morgen-sesh

--- a/main.tex
+++ b/main.tex
@@ -470,7 +470,7 @@ Step I-IV is then repeated $B$ times, while keeping track of each sample MSE. Af
   \hfill
   \begin{subfigure}{0.49\textwidth}
       \centering
-      \includegraphics[width=\textwidth]{figures/EX2_model_complexity_using_bootstrap_function_n_40_testsize_0.3.pdf.pdf}
+      \includegraphics[width=\textwidth]{figures/EX2_model_complexity_using_bootstrap_function_n_40_testsize_0.3.pdf}
       \caption{1600 datapoints, 800 bootstraps}
       \label{fig:bootstrap_bias_var_n_30}
   \end{subfigure}
